--- a/WIP/dtm_v2/sass/abstracts/_variables.scss
+++ b/WIP/dtm_v2/sass/abstracts/_variables.scss
@@ -91,7 +91,7 @@ $clr-grey-11: #eee;
 $clr-grey-light-1: #f9f7f6; // grey-light-1
 
 // Text
-$clr-silver: #c0c0c0; // Text Color
+$clr-text: #e2e2e2; // Text Color
 $clr-white: #fff;
 $clr-black: #000;
 
