--- a/WIP/dtm_v2/sass/layout/_about.scss
+++ b/WIP/dtm_v2/sass/layout/_about.scss
@@ -92,8 +92,9 @@ ABOUT
     &--text-p1,
     &--text-p2 {
       font-weight: 400;
-      letter-spacing: 2px;
+      letter-spacing: 1px;
       line-height: 1.5;
+      color: $clr-text;
     }
   }
 
