--- a/WIP/dtm_v2/sass/layout/_projects.scss
+++ b/WIP/dtm_v2/sass/layout/_projects.scss
@@ -197,7 +197,7 @@ PROJECTS
         letter-spacing: 2px;
         font-size: 2rem;
         font-weight: 400;
-        color: $clr-silver;
+        color: $clr-text;
         margin: 0 auto;
       }
 
@@ -242,7 +242,7 @@ PROJECTS
           /* GitHub Icon Styling GLOBAL */
           width: 30px;
           height: 30px;
-          color: silver;
+          color: $clr-text;
           transition: 0.4s ease-in-out;
 
           &:hover {
